Update Java backend market analysis implementation